--- a/activity03/styles.css
+++ b/activity03/styles.css
@@ -1,156 +1,103 @@
- .flex-container {
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        height: 100vh;
+        margin: 0;
+    }
+
+    .credit-card1, .credit-card2, .credit-card3 {
     display: flex;
-    flex-wrap: nowrap;
-  }
-  
-  .flex-container > div {
-    background-color: #f1f1f1;
-    width: 100%;
-    margin: 10px;
-    text-align: center;
-    /* line-height: 75px; */
-    font-size: 30px;
-    border-radius: 6px;
-  }
+    flex-direction: column;
+    background-color: #f5f5f5;
+    width: 300px;
+    height: 150px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    position: relative;
+}
+.credit-card1{ background-color: rgb(64, 154, 131); color: #ffffff;} 
+.credit-card3{ background-color: rgb(179, 135, 25); color: #ffffff;}
+    .card-number {
+        font-size: 18px;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
 
-  .dot {
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-    display: inline-block;
-    align-items: center;
-  }
-  .flex-container .card1 .dot, 
-  .flex-container .card3 .dot {  
-    background-color: #f1f1f1;
-  }
-  .flex-container .card2 .dot{ background-color: #000;
-  }
-  .flex-container .card1 {
-    background-color: rgb(14, 164, 136);
-    color: #f1f1f1;
-  }
-  .flex-container .card3 {
-    background-color: rgb(174, 148, 29);
-    color: #f1f1f1;
-  }
-  span.number {
-    font-size: 22px;
-}
-.card-img { width: 40px; 
-} 
-h6 {
-  font-family: sans-serif;
-  font-size: 12px;
-  text-align: left;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
+    .card-holder,
+    .expiry-date,
+    .security-code {
+        /* margin-bottom: 10px; */
+    }
 
+    .card-number,
+    .expiry-date,
+    .security-code,
+    .card-holder,
+    .card-type {
+        display: flex;
+        /* justify-content: space-between; */
+    }
 
-/****************************/
-.card {
-  /* height: 310px;
-  width: 500px; */
-  background-image:linear-gradient(rgba(255, 61, 61, 1),rgba(255, 61, 61, 0.8));
-  border-radius: 20px;
-  color:white;
-  margin:20px;
-  font-size: 16px;
-  box-shadow: 2px 2px 20px #707070;
+    .card-type {
+        margin-bottom: 15px;
+        flex: 1;
+    }
+    .expiry-date span,  .card-holder span{ font-size: 12px;}
+    .card-type img {
+    width: 40px;
+    height: auto;
+    top: 20px;
+    right: 20px;
+    position: absolute;
 }
-.top-block {
-  display: inline-block;
-  width:500px;
-  height:155px;
+.card-holder span{ margin-top: 2px;}
+span.bnp {
+    margin-left: 15px;
 }
- .bottom-block {
-  display: inline-block;
-  width:500px;
-  height:155px;
+.card-number span {
+    margin-right: 12px;
+    font-size: 25px;
 }
-
-.card-name {
-  float:right;
-  margin:20px;
-  position:relative;
-  font-size: 28px;
-  font-weight:550;
-}
-
-.balance {
-  float:left;
-  margin: 20px;
-  position:relative;
-  top:38px;
-}
-.card-balance {
-  font-weight:700;
-  font-size: 30px;
-  margin-top:10px;
-}
-.card-icon {
-  float:right;
-  margin: 0 20px 0 0;
-  margin-top:75px;
-}
-.circle-left {
-  margin-right: -15px;
-  opacity:0.7;
-}
-.card-number {
-  font-size: 28px;
-  margin: -15px 0 0 0;
-  text-align-last: center; 
-}
-
-/* *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-body{
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.container{
-  position: relative;
-  background-color: aqua;
-  padding: 25px;
-  border-radius: 28px;
-  max-width: 350px;
-  width: 100%;
-  height: 180px;
-  box-shadow: 0 5px 10px rgb(0, 0, 0, 0.1);
-}
-header, .logo{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.logo img{
- width: 48px;
- margin-right: 10px;
-}
-h5{
-  font-weight: 800;
-  font-size: 15px;
-  color: black;
-}
-header .chip{ width:60px;}
-h6{
-  color: black;
-  font-size: 12px;
-  letter-spacing: 1px;
-}
-.container .card-info{
-  display: flex;
-  margin-top: 40px;
-  justify-content: space-between;
-  align-items: self-end;
-}
-.bnp{ margin-left: 20px;} */
+body {
+            font-family: Arial, sans-serif;
+        }
+        .testimonial {
+            display: flex;
+            align-items: center;
+            background-color: #525fd2;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 3px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 30%;
+        }
+        .testimonial img {
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            margin-right: 20px;
+        }
+        .testimonial-content {
+            flex: 1;
+        }
+        .testimonial-name {
+            font-weight: bold;
+            margin-top: 10px;
+            color: #ffffff;
+        }
+        .rating {
+            color: #ffffff; /* Yellow color for rating stars */
+            font-size: 25px;
+        }
+        .company{color:#ffffff; font-size: 11px;}
+        
+.new-line {
+      
+            display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+</style>
